[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="PanelContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Solido Tri-D"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ModuleLabel" type="Label" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Module"

[node name="ModuleSelector" type="OptionButton" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ParamsLabel" type="Label" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Parameters"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ParametersContainer" type="VBoxContainer" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate"

[node name="SaveButton" type="Button" parent="HSplitContainer/LeftPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"
disabled = true

[node name="RightPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewportContainer" type="SubViewportContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="HSplitContainer/RightPanel/ViewportContainer"]
handle_input_locally = false
size = Vector2i(1270, 720)
render_target_update_mode = 4
